--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  riverpod: ^2.3.4
+  hooks_riverpod:
+  flutter_hooks: ^0.18.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
