--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_swiper_null_safety: ^1.0.2
+  google_maps_flutter: ^2.2.5
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
