--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"　
-            android:value="YOUR KEY HERE"/>
+            android:value="AIzaSyDs8r9snB7DX6nHAyxcQoLk8F2PtarCwwE"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
