--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dart.flutterSdkPath": "/Users/uenotomohiro/Desktop/stamp-rally/.fvm/flutter_sdk"
+    "dart.flutterSdkPath": "/Users/uenotomohiro/Desktop/stamp-rally/.fvm/flutter_sdk",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
