--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   google_maps_flutter: ^2.2.5
   geolocator: ^9.0.2
+  firebase_core: ^2.10.0
 
 dev_dependencies:
   flutter_test:
