--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   geolocator: ^9.0.2
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
+  cloud_firestore: ^4.6.0
 
 dev_dependencies:
   flutter_test:
