--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   google_maps_flutter: ^2.2.5
   geolocator: ^9.0.2
   firebase_core: ^2.10.0
-  firebase_auth: ^4.4.2
+  firebase_auth:
   cloud_firestore: ^4.6.0
 
 dev_dependencies:
