--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dev_dependencies:
   riverpod: ^2.3.4
   hooks_riverpod:
   flutter_hooks: ^0.18.6
+  mockito: ^5.0.0
+  provider: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
